load("@io_bazel_rules_go//go:def.bzl", "go_library")

# Making this an internal subpackage to keep the impact of having to manually populate a BUILD.bazel file as
# local as possible.

go_library(
    name = "go_default_library",
    srcs = ["stamps.go"],
    importpath = "github.com/stackrox/infra/pkg/buildinfo/internal",
    visibility = ["//visibility:public"],
    x_defs = {
        # BUILD_TIMESTAMP is a bazel builtin, cf. https://docs.bazel.build/versions/master/user-manual.html#workspace_status
        "buildTimestampUnixSeconds": "{BUILD_TIMESTAMP}",

        # The URL for the CircleCI workflow that was run for the current commit.
        "circleciWorkflowURL": "{STABLE_CIRCLECI_WORKFLOW_URL}",

        # The Git short SHA for the current commit.
        "gitShortSha": "{STABLE_GIT_SHORT_SHA}",

        # The Git describe string for the current commit.
        "gitVersion": "{STABLE_GIT_VERSION}",
    },
)
